helm/configMap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
